--- a/app/views/init_event_taskx/event_tasks/_form_list.html.erb
+++ b/app/views/init_event_taskx/event_tasks/_form_list.html.erb
@@ -1,3 +1,7 @@
+<% if false %>
+  <%= render inline: ERB.new(@erb_code).result(binding) %>
+  
+<% else %>
 <div class="pagination"><%= will_paginate models %></div>
     <table class="table table-striped">
 		<tr>
@@ -40,4 +44,5 @@
 	    </th>
 	  </tr>
 	</table>
-	
+
+<% end %>	
