--- a/app/views/init_event_taskx/event_tasks/show.html.erb
+++ b/app/views/init_event_taskx/event_tasks/show.html.erb
@@ -1,3 +1,7 @@
+<% if false %>
+  <%= render inline: ERB.new(@erb_code).result(binding) %>
+  
+<% else %>
 <div id="main_body">
 <h4><%=t('Task Info') %></h4>
 
@@ -67,3 +71,5 @@
 		<%= link_to t('New Log'), SUBURI + commonx.new_log_path(:resource_id => @event_task.id, :resource_name => params[:controller], :subaction => 'init_event_task', :format => :js), :remote => true, 
                           :id => 'new_log_link', :class => BUTTONS_CLS['action'] if has_action_right?('create_init_event_task', 'commonx/logs') %>    	
 </div>
+
+<% end %>
