--- a/app/views/init_event_taskx/event_tasks/index.html.erb
+++ b/app/views/init_event_taskx/event_tasks/index.html.erb
@@ -1,5 +1,5 @@
 <div id="main_body">
-	<h4><%=t('Tasks') %></h>
+	<h4><%= @title %></h>
  
 	<%= render partial: 'form_list', locals: {models: @event_tasks} %>
  
