--- a/app/views/init_event_taskx/event_tasks/_form_new.html.erb
+++ b/app/views/init_event_taskx/event_tasks/_form_new.html.erb
@@ -1,5 +1,5 @@
 <% if @view_in_config && @erb_code %>
-  <%= render inline: ERB.new(@erb_code).result(binding) %>
+  <%= render inline: @erb_code %>
   
 <% else %>
 <%= simple_form_for @event_task do |f| %>    
@@ -14,7 +14,7 @@
 	  <%= f.input :task_category, :as => :hidden, :input_html => {:value => @task_category} if @task_category.present? %>
 	  
 	  <%= link_to t('Back'), SUBURI + "/authentify/view_handler?index=0", :class => BUTTONS_CLS['action'] %>	  
-	  <%= f.button :submit, t('Save'), :class =>'btn btn-primary' %>  
+	  <%= f.button :submit, t('Save'), :class => BUTTONS_CLS['action'] %>  
 <% end %>  
 
 <% end %>
