--- a/app/views/init_event_taskx/event_tasks/_form_new.html.erb
+++ b/app/views/init_event_taskx/event_tasks/_form_new.html.erb
@@ -11,7 +11,7 @@
 	  <%= f.input :task_status_id, :label => t('Task Status'), :collection => Commonx::MiscDefinition.where(:for_which => 'task_status'), :include_blank => true %>
 	  <%= f.input :executioner_id, :label => t('Executioner'), :collection => Authentify::User.where(:status => 'active'), :include_blank => true %>
 	  <%= f.input :expedite, :label => t('Expedite'), :as => :boolean %>
-	  <%= f.input :task_category, :as => :hidden, :input_html => {:value => @task_category} if @task_category.present? %>
+	  <%= f.input :task_category, :as => :hidden, :input_html => {:value => @task_category} %>
 	  
 	  <%= link_to t('Back'), SUBURI + "/authentify/view_handler?index=0", :class => BUTTONS_CLS['action'] %>	  
 	  <%= f.button :submit, t('Save'), :class => BUTTONS_CLS['action'] %>  
